--- a/wise-dogs-app/src/App.module.css
+++ b/wise-dogs-app/src/App.module.css
@@ -2,6 +2,6 @@
   margin: 0;
   padding: 0;
 }
-/* .appContainer {
-  background-color: #E5E5E5;
-} */
+.appContainer {
+  background-color: #c9c9e6;
+}
